Adding LDA model to exploratory notebook

--- a/src/exploratory_maria.ipynb
+++ b/src/exploratory_maria.ipynb
@@ -10,13 +10,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from src.basic_project import preprocessing, extract_data\n",
+    "from src.basic_project import preprocessing, extract_data, BasicModel\n",
     "from gensim.models.ldamodel import LdaModel\n",
     "from gensim.matutils import corpus2dense, corpus2csc\n",
     "from gensim.corpora import Dictionary\n",
@@ -31,26 +31,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Function to train models\n",
-    "def train_model(x_train, y_train, x_test, y_test):\n",
-    "    grid_param = {'kernel':('linear', 'rbf'), 'C':[0.1 ,1, 10]}\n",
-    "    svc = svm.SVC(class_weight='balanced')\n",
-    "    bow_grid = GridSearchCV(svc, grid_param, refit=True, cv = 2, n_jobs=-1)\n",
-    "    bow_grid.fit(x_train, y_train)\n",
-    "    return bow_grid, bow_grid.score(x_test,y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "texts, labels = extract_data('data/projects.xlsx', 'data/SciVocCodes.xlsx')\n",
+    "texts, labels, costs, contributions = extract_data('data/projects.xlsx', 'data/SciVocCodes.xlsx')\n",
     "texts = preprocessing(texts)"
    ]
   },
@@ -64,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,126 +57,6 @@
     "D = Dictionary([sentence.split(' ') for sentence in texts])\n",
     "n_tokens = len(D)\n",
     "reviews_bow = [D.doc2bow(doc.split(' ')) for doc in texts]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_topics = 200\n",
-    "ldag = LdaModel(corpus=reviews_bow, id2word=D, num_topics=num_topics)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 71,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus_ldag = ldag[reviews_bow]\n",
-    "num_docs = len(reviews_bow)\n",
-    "corpus_ldag_sparse = corpus2csc(corpus_ldag, num_terms=n_tokens, num_docs=num_docs).T"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 72,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corpus_train,corpus_test, y_train, y_test = train_test_split(corpus_ldag_sparse, labels, test_size=0.3, random_state=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "bow_grid,score = train_model(corpus_train, y_train, corpus_test, y_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 77,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.6132487520798668\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(score)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 79,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5497852540673918\n"
-     ]
-    }
-   ],
-   "source": [
-    "y_pred = bow_grid.predict(corpus_test)\n",
-    "print(balanced_accuracy_score(y_pred, y_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 80,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.5732047411388569\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(balanced_accuracy_score(y_test, y_pred))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "              precision    recall  f1-score   support\n",
-      "\n",
-      "           0       0.61      0.77      0.68      1507\n",
-      "           1       0.71      0.57      0.63      3794\n",
-      "           2       0.56      0.65      0.61      2045\n",
-      "           3       0.35      0.32      0.33       205\n",
-      "           4       0.57      0.56      0.57      1715\n",
-      "           5       0.50      0.57      0.53       350\n",
-      "\n",
-      "    accuracy                           0.61      9616\n",
-      "   macro avg       0.55      0.57      0.56      9616\n",
-      "weighted avg       0.62      0.61      0.61      9616\n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(classification_report(y_test, y_pred))"
    ]
   },
   {
