--- a/src/exploratory.ipynb
+++ b/src/exploratory.ipynb
@@ -27,6 +27,7 @@
     "from gensim.matutils import corpus2dense, corpus2csc\n",
     "from gensim.corpora import Dictionary\n",
     "from gensim.models import TfidfModel\n",
+    "from gensim.models.ldamodel import LdaModel\n",
     "\n",
     "# other libraries\n",
     "import warnings\n",
@@ -350,7 +351,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "urano",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -364,12 +365,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.7 (main, Sep 14 2022, 22:38:23) [Clang 14.0.0 (clang-1400.0.29.102)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "cc47177bd4f557a0fda42b7077dac6687cbd1cff99b9c826b01cc7718c80d60b"
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
    }
   }
  },
