primer análisis de grafos

--- a/src/exploratory.ipynb
+++ b/src/exploratory.ipynb
@@ -2,21 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/jovyan/envs/urano/lib/python3.8/site-packages/tqdm/auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# machine learning and NLP libraries\n",
-    "import torchtext\n",
+    "#import torchtext\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from scipy.sparse import csr_matrix, hstack\n",
@@ -49,12 +40,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "texts, labels, costs, contributions = extract_data('data/projects.xlsx', 'data/SciVocCodes.xlsx')\n",
     "texts = preprocessing(texts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get texts in right format\n",
+    "D = Dictionary([sentence.split(' ') for sentence in texts])\n",
+    "n_tokens = len(D)\n",
+    "reviews_bow = [D.doc2bow(doc.split(' ')) for doc in texts]"
    ]
   },
   {
@@ -75,15 +78,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# get texts in right format\n",
-    "D = Dictionary([sentence.split(' ') for sentence in texts])\n",
-    "n_tokens = len(D)\n",
-    "reviews_bow = [D.doc2bow(doc.split(' ')) for doc in texts]\n",
-    "\n",
     "# compute tfidf representations\n",
     "tfidf = TfidfModel(reviews_bow)\n",
     "reviews_tfidf = tfidf[reviews_bow]\n",
@@ -342,11 +340,98 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ======== LDA MODEL ========"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "LDA"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# compute LDA model\n",
+    "num_topics = 90\n",
+    "ldag = LdaModel(corpus=reviews_bow, id2word=D, num_topics=num_topics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create sparse corpus\n",
+    "corpus_ldag = ldag[reviews_bow]\n",
+    "num_docs = len(reviews_bow)\n",
+    "corpus_ldag_sparse = corpus2csc(corpus_ldag, num_terms=n_tokens, num_docs=num_docs).T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = BasicModel(corpus_ldag_sparse, labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "accuracy: 63.94%\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'accuracy: {model.accuracy*100:.2f}%')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.57      0.81      0.67       488\n",
+      "           1       0.78      0.50      0.61      1326\n",
+      "           2       0.56      0.67      0.61       659\n",
+      "           3       0.17      0.47      0.25        73\n",
+      "           4       0.58      0.48      0.53       549\n",
+      "           5       0.42      0.81      0.55       111\n",
+      "\n",
+      "    accuracy                           0.59      3206\n",
+      "   macro avg       0.51      0.62      0.54      3206\n",
+      "weighted avg       0.64      0.59      0.59      3206\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(model.classification_report)"
+   ]
   }
  ],
  "metadata": {
@@ -365,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.7 (main, Sep 14 2022, 22:38:23) [Clang 14.0.0 (clang-1400.0.29.102)]"
+   "version": "3.10.7"
   },
   "orig_nbformat": 4,
   "vscode": {
