--- a/src/exploratory.ipynb
+++ b/src/exploratory.ipynb
@@ -552,6 +552,29 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[-19.33183056075147,\n",
+       " -24.857255148912824,\n",
+       " -30.34615511758675,\n",
+       " -35.82346883337626]"
+      ]
+     },
+     "execution_count": 132,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "perplexity"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 130,
    "metadata": {},
    "outputs": [
