--- a/src/project.ipynb
+++ b/src/project.ipynb
@@ -1390,8 +1390,7 @@
    ],
    "source": [
     "# All other entries are values in  [0,1] . \n",
-    "# Since the embedding space is probabilistic the row vectors should sum up to one. \n",
-    "# However, we can check that this is no exactly the case: \n",
+    "\n",
     "average_row = np.mean(X.sum(axis=1).T)\n",
     "print(f\"Average row sum: {average_row:.2f}\")\n",
     "if average_row != 1.0: # If the row of vectros are not sum to one, we need to normalize this.\n",
@@ -1588,7 +1587,7 @@
    "source": [
     "### Semantic Graph\n",
     "\n",
-    "Para la representación de los grafos seguiremos, hemos optado por seguir los siguientes pasos:\n",
+    "For the representation of the graphs, we have chosen to follow the following steps:\n",
     "\n",
     "1. Graph construction\n",
     "2. Visualize Graphs with layout algorithms\n",
@@ -1721,7 +1720,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.1 Testing Random Layout"
+    "2.1 Testing Random Layout\n",
+    "\n",
+    "*This algorithm is used to visualize graphs and data networks randomly. This algorithm places the nodes of the graph randomly in the visualization space and then connects the nodes with lines representing the relationships between them.*"
    ]
   },
   {
@@ -1755,7 +1756,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2.2 Testing a Fruchterman-Reingold: Forced-directed algorithm"
+    "2.2 Testing a Fruchterman-Reingold: Forced-directed algorithm\n",
+    "\n",
+    "*Such an algorithm is used to arrange the nodes so that the relationships between them are easy to see. This algorithm is an example of a force-directed algorithm, which means that it uses a series of forces to move and arrange the nodes in the display space.* "
    ]
   },
   {
@@ -1837,7 +1840,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1890,8 +1893,8 @@
     "# The resolution parameter of the community.greedy_modularity_communities() function controls \n",
     "# the amount of clustering that is performed on the network. \n",
     "# To determine the optim value of resolution we use differents numbers to study the modularity.\n",
-    "# (Modularity is a measure used to evaluate the quality of a partition of a network into communities or groups of nodes.)\n",
-    "for resolution in [0.5, 1, 1.5, 2, 2.5 , 3, 3.5]:\n",
+    "# (MCM)\n",
+    "for resolution in [0.5, 1, 1.5, 2, 2.5 ,3, 3.5]:\n",
     "    C = nx_comm.greedy_modularity_communities(G_lcc, resolution=resolution)\n",
     "    # Modularity of the partition\n",
     "    modularity = nx_comm.modularity(G_lcc, C)\n",
@@ -2132,7 +2135,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>reviews</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ebola virus modern approach developing bedside...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                             reviews\n",
+       "0  ebola virus modern approach developing bedside..."
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame(texts, columns=['reviews'])\n",
+    "df.head(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2147,7 +2203,11 @@
     "\n",
     "    # Plot graph\n",
     "    plt.figure(figsize=(4, 4))\n",
-    "    nx.draw(G_lcc, positions, node_size=node_sizes, node_color=node_colors, width=0.1)"
+    "    nx.draw(G_lcc, positions, node_size=node_sizes, node_color=node_colors, width=0.1)\n",
+    "    # Print top 3 nodes\n",
+    "    top3_nodes = [x[0] for x in sorted_ctr[:3]]\n",
+    "    df_best = df.iloc[top3_nodes][['reviews']]\n",
+    "    print(df_best)"
    ]
   },
   {
@@ -2160,7 +2220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -2190,14 +2250,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.08603238866396762\n"
+      "0.08603238866396762\n",
+      "                                               reviews\n",
+      "915  implementation preliminary validation novel no...\n",
+      "538  genome wide analysis rna protein interacting p...\n",
+      "876  natural sense vision acoustic hapticssound vis...\n"
      ]
     },
     {
@@ -2225,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2242,14 +2306,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 82,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0887224421012576\n"
+      "1.0887224421012576\n",
+      "                                               reviews\n",
+      "266  cbrne detection containersthe threat cbrne che...\n",
+      "126  quantum plasmomechanics thz phonons molecular ...\n",
+      "926  mathematical frontier analysis many particle s...\n"
      ]
     },
     {
@@ -2277,14 +2345,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.023181855781321793\n"
+      "0.023181855781321793\n",
+      "                                               reviews\n",
+      "17   impact superfluidity superconductivity magneto...\n",
+      "266  cbrne detection containersthe threat cbrne che...\n",
+      "898  continuation effort local enterprise europe ne...\n"
      ]
     },
     {
@@ -2314,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [
     {
@@ -2680,13 +2752,6 @@
    "source": [
     "print(model.classification_report)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
